--- a/src/components/footer/index.less
+++ b/src/components/footer/index.less
@@ -2,10 +2,19 @@
   display: flex;
   color: #FFF;
   font-family: HelveticaNeueCyr-Light, sans-serif;
-  gap: 100px;
+  flex-direction: column;
+
+  &__blocks {
+    display: flex;
+    gap: 100px;
+    flex-wrap: wrap;
+    margin-bottom: 50px;
+  }
+
 
   &__block {
     min-width: calc(50% - 50px);
+    width: calc(50% - 50px);
   }
 
   &__block-title {
@@ -65,5 +74,45 @@
     background-image: url("../../icons/mir-logo.svg");
     background-repeat: no-repeat;
     background-size: cover;
+  }
+
+  &__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    &__link {
+      font-family: HelveticaNeueCyr, sans-serif;
+      font-weight: 700;
+      font-size: 24px;
+      line-height: 120%;
+      letter-spacing: 0;
+      margin-bottom: 20px;
+    }
+
+    &__icons {
+      display: flex;
+      gap: 24px;
+    }
+
+    &__icon {
+      display: block;
+      width: 50px;
+      height: 50px;
+      background-size: cover;
+      background-repeat: no-repeat;
+
+      &_tg {
+        background-image: url("../../icons/telegram-logo.svg");
+      }
+
+      &_yt {
+        background-image: url("../../icons/youtube-logo.svg");
+      }
+
+      &_vk {
+        background-image: url("../../icons/vk-logo.svg");
+      }
+    }
   }
 }
