--- a/src/components/page/index.less
+++ b/src/components/page/index.less
@@ -41,11 +41,31 @@
     }
 
     &_footer {
+      position: relative;
       background-color: #DB1933;
-      background-image: url("../../icons/big-arcs-footer.svg");
-      background-position: 50%;
-      background-repeat: no-repeat;
-      background-size: 45% 100%;
+
+
+      &::after {
+        pointer-events: none;
+        position: absolute;
+        top:0;
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-position: 50%;
+        background-repeat: no-repeat;
+        background-size: 45% 100%;
+        content: ' ';
+        background-color: #ffffff1a;
+        mask-image: url("../../icons/big-arcs-4back.svg");
+        mask-size: 60%, 60%;
+        mask-position: center;
+        mask-repeat: no-repeat;
+      }
+    }
+
+    &_bottom {
+      background-color: #202020;
     }
   }
 
