--- a/src/components/block-bottom/index.less
+++ b/src/components/block-bottom/index.less
@@ -1,8 +1,8 @@
 .block-bottom {
-  color: #FFFFFF;
+  color: #FFF;
   font-family: HelveticaNeueCyr-Light, sans-serif;
-  font-weight: 400;
   font-size: 12px;
-  line-height: 100%;
+  font-weight: 400;
   letter-spacing: 0;
+  line-height: 100%;
 }
