--- a/src/components/page/index.less
+++ b/src/components/page/index.less
@@ -17,6 +17,27 @@
       background: #DB1933;
     }
 
+    &_offer {
+      overflow: hidden;
+
+      &::after {
+        position: absolute;
+        top: -80px;
+        right: -320px;
+        display: block;
+        width: 100%;
+        height: 600px;
+        background-color: #202020;
+        background-repeat: no-repeat;
+        content: ' ';
+        mask-image: url("../../icons/big-arcs-4back.svg");
+        mask-position: center;
+        mask-repeat: no-repeat;
+        mask-size: 600px, 600px;
+        pointer-events: none;
+      }
+    }
+
     &_welcome {
       /* Чтобы шум не убегал за границы блока */
       overflow: hidden;
@@ -46,21 +67,21 @@
 
 
       &::after {
-        pointer-events: none;
         position: absolute;
         top:0;
         display: block;
         width: 100%;
         height: 100%;
+        background-color: #ffffff1a;
         background-position: 50%;
         background-repeat: no-repeat;
         background-size: 45% 100%;
         content: ' ';
-        background-color: #ffffff1a;
         mask-image: url("../../icons/big-arcs-4back.svg");
-        mask-size: 60%, 60%;
         mask-position: center;
         mask-repeat: no-repeat;
+        mask-size: 60%, 60%;
+        pointer-events: none;
       }
     }
 
