--- a/docs/styles.css
+++ b/docs/styles.css
@@ -345,20 +345,20 @@ html {
   overflow: hidden;
 }
 .page__block_offer::after {
-  pointer-events: none;
   position: absolute;
-  top: 0;
-  right: -450px;
+  top: -80px;
+  right: -320px;
   display: block;
   width: 100%;
-  height: 100%;
+  height: 600px;
+  background-color: #202020;
   background-repeat: no-repeat;
   content: ' ';
-  background-color: #202020;
   mask-image: url(e505203032cbdc321fec.svg);
-  mask-size: 600px, 600px;
   mask-position: center;
   mask-repeat: no-repeat;
+  mask-size: 600px, 600px;
+  pointer-events: none;
 }
 .page__block_welcome {
   /* Чтобы шум не убегал за границы блока */
@@ -383,21 +383,21 @@ html {
   background-color: #DB1933;
 }
 .page__block_footer::after {
-  pointer-events: none;
   position: absolute;
   top: 0;
   display: block;
   width: 100%;
   height: 100%;
+  background-color: #ffffff1a;
   background-position: 50%;
   background-repeat: no-repeat;
   background-size: 45% 100%;
   content: ' ';
-  background-color: #ffffff1a;
   mask-image: url(e505203032cbdc321fec.svg);
-  mask-size: 60%, 60%;
   mask-position: center;
   mask-repeat: no-repeat;
+  mask-size: 60%, 60%;
+  pointer-events: none;
 }
 .page__block_bottom {
   background-color: #202020;
@@ -566,8 +566,8 @@ html {
   /* 64.8px */
 }
 .block-offer__image {
-  z-index: 1;
   position: relative;
+  z-index: 1;
   height: 275px;
   flex-grow: 1;
   border: 10px solid #202020;
@@ -1014,19 +1014,19 @@ html {
 
 .footer {
   display: flex;
+  flex-direction: column;
   color: #FFF;
   font-family: HelveticaNeueCyr-Light, sans-serif;
-  flex-direction: column;
 }
 .footer__blocks {
   display: flex;
-  gap: 100px;
   flex-wrap: wrap;
   margin-bottom: 50px;
+  gap: 100px;
 }
 .footer__block {
-  min-width: calc(50% - 50px);
   width: calc(50% - 50px);
+  min-width: calc(50% - 50px);
 }
 .footer__block-title {
   margin: 0 0 25px;
@@ -1088,12 +1088,12 @@ html {
   align-items: center;
 }
 .footer__links__link {
-  font-family: HelveticaNeueCyr, sans-serif;
-  font-weight: 700;
-  font-size: 24px;
-  line-height: 120%;
-  letter-spacing: 0;
   margin-bottom: 20px;
+  font-family: HelveticaNeueCyr, sans-serif;
+  font-size: 24px;
+  font-weight: 700;
+  letter-spacing: 0;
+  line-height: 120%;
 }
 .footer__links__icons {
   display: flex;
@@ -1103,8 +1103,8 @@ html {
   display: block;
   width: 50px;
   height: 50px;
-  background-size: cover;
   background-repeat: no-repeat;
+  background-size: cover;
 }
 .footer__links__icon_tg {
   background-image: url(ed8827044818b53276ff.svg);
@@ -1149,12 +1149,12 @@ html {
 }
 
 .block-bottom {
-  color: #FFFFFF;
+  color: #FFF;
   font-family: HelveticaNeueCyr-Light, sans-serif;
-  font-weight: 400;
   font-size: 12px;
-  line-height: 100%;
+  font-weight: 400;
   letter-spacing: 0;
+  line-height: 100%;
 }
 
 .list {
