--- a/src/components/block-main/index.less
+++ b/src/components/block-main/index.less
@@ -1,3 +1,5 @@
+@import url("../../common/adaptive");
+
 .block-main {
   height: 100%;
   color: #FFF;
@@ -9,6 +11,10 @@
     font-weight: 900;
     letter-spacing: -1.84px;
     line-height: 90%; /* 82.8px */
+
+    .mobile-screen({
+      font-size: 40px;
+    });
   }
 
   &__counter {
@@ -17,8 +23,13 @@
     flex-wrap: wrap;
     align-content: center;
     align-items: center;
-    padding: 90px 0 70px 210px ;
+    padding: 90px 0 70px 210px;
     gap: 30px;
+
+    .mobile-screen({
+      padding: 60px 60px 70px 170px;
+      flex-direction: column;
+    });
 
     &__count-wrapper {
       display: flex;
@@ -32,6 +43,10 @@
       font-style: normal;
       font-weight: 600;
       line-height: normal;
+
+      .mobile-screen({
+        font-size: 36px;
+      });
     }
 
     &__persons {
@@ -41,6 +56,10 @@
       font-weight: 400;
       line-height: 90%;
       text-align: center;
+
+      .mobile-screen({
+        font-size: 16px;
+      });
     }
 
     &__text {
@@ -51,6 +70,11 @@
       font-weight: 400;
       line-height: 90%;
       text-align: center;
+
+      .mobile-screen({
+        width: auto;
+        font-size: 16px;
+      });
     }
   }
 
@@ -58,7 +82,18 @@
   &__preview {
     display: flex;
     gap: 69px;
+    .mobile-screen({
+      gap: 20px;
+    });
+
+    &__button {
+      .mobile-screen({
+        display: flex;
+        align-items: center;
+      });
+    }
   }
+
 
   &__preview__text {
     font-family: HelveticaNeueCyr-Light, sans-serif;
@@ -66,5 +101,9 @@
     font-style: normal;
     font-weight: 300;
     line-height: 90%;
+
+    .mobile-screen({
+      font-size: 18px;
+    });
   }
 }
