--- a/src/components/buy-button/index.less
+++ b/src/components/buy-button/index.less
@@ -1,3 +1,5 @@
+@import url("../../common/adaptive");
+
 .buy-button {
   display: flex;
   height: 95px;
@@ -10,6 +12,12 @@
   box-shadow: 0 4px 54px 0 rgb(0 0 0 / 25%);
   gap: 10px;
   text-decoration: none;
+
+  .mobile-screen({
+    height: 47px;
+    border-radius: 35px;
+    padding: 0 15px 0 19px;
+  });
 
   &__text {
     display: flex;
@@ -27,5 +35,11 @@
     line-height: 90%; /* 19.8px */
     text-align: left;
     text-transform: uppercase;
+
+    .mobile-screen({
+      border-left: 1px dashed #FFF;
+      font-size: 11px;
+      padding: 7px 0 7px 7px;
+    });
   }
 }
