--- a/src/components/block-partners/index.less
+++ b/src/components/block-partners/index.less
@@ -1,9 +1,12 @@
+@import url("../../common/adaptive");
+
+
 .block-partners {
   &__top {
     display: flex;
     justify-content: space-between;
     margin: 0 auto;
-    gap: 100px;
+    gap: 40px;
   }
 
   &__title {
@@ -13,13 +16,27 @@
     font-style: normal;
     font-weight: 900;
     line-height: 90%; /* 43.2px */
+
+    .mobile-screen({
+      font-size: 32px;
+      margin-bottom: 40px;
+    });
   }
 
   &__logo {
     width: 257px;
     height: 90px;
     margin-bottom: 50px;
-    background: url("../../icons/malina-logo.svg");
+    background-image: url("../../icons/malina-logo.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    .mobile-screen({
+      min-width: 130px;
+      width: 130px;
+      height: 45px;
+      margin-bottom: 40px;
+    });
   }
 
   &__summary {
@@ -32,6 +49,11 @@
     font-style: normal;
     font-weight: 400;
     line-height: 120%; /* 28.8px */
+
+    .mobile-screen({
+      font-size: 16px;
+      margin-bottom: 40px;
+    });
   }
 
   &__faq-title {
@@ -42,5 +64,9 @@
     font-style: normal;
     font-weight: 900;
     line-height: 90%; /* 43.2px */
+    .mobile-screen({
+      font-size: 32px;
+      margin-bottom: 40px;
+    });
   }
 }
