--- a/src/components/block-welcome/index.less
+++ b/src/components/block-welcome/index.less
@@ -1,3 +1,5 @@
+@import url("../../common/adaptive");
+
 .block-welcome {
   position: relative;
   z-index: 2;
@@ -17,6 +19,12 @@
     font-weight: 900;
     letter-spacing: -1.6px;
     line-height: 90%; /* 72px */
+
+    .mobile-screen({
+      font-size: 32px;
+      width: 200px;
+      height: 124px;
+    });
   }
 
   &__button {
