--- a/src/components/footer/index.less
+++ b/src/components/footer/index.less
@@ -1,3 +1,5 @@
+@import url("../../common/adaptive");
+
 .footer {
   display: flex;
   flex-direction: column;
@@ -9,12 +11,23 @@
     flex-wrap: wrap;
     margin-bottom: 50px;
     gap: 100px;
+
+    .mobile-screen({
+      flex-direction: column;
+      gap: 50px;
+    });
   }
 
 
   &__block {
     width: calc(50% - 50px);
     min-width: calc(50% - 50px);
+
+    .mobile-screen({
+      text-align: center;
+      width: 100%;
+      min-width: 100%;
+    });
   }
 
   &__block-title {
@@ -30,6 +43,12 @@
     padding: 0;
     margin: 0 0 40px;
     list-style: none;
+
+    .mobile-screen({
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    });
 
     &__item {
       margin-bottom: 15px;
