--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -32,6 +32,10 @@
     justify-content: space-between;
     padding: 0 100px;
     margin: 0 auto;
+
+    .mobile-screen({
+      padding: 0 20px;
+    })
   }
 
   &__logo {
@@ -54,12 +58,13 @@
 
       .mobile-screen({
         top: 86px;
-        left: -88px;
+        left: 12px;
         width: 105px;
 
         &_scrolled {
           top: 26px;
           width: 99px;
+          left: 4px;
         }
       });
     }
@@ -85,11 +90,11 @@
         top: 29px;
         width: 149px;
         height: 163px;
-        left: -70px;
+        left: 30px;
 
         &_scrolled {
           top: 11px;
-          left: 24px;
+          left: 84px;
           width: 47px;
         }
       });
@@ -113,13 +118,13 @@
 
       .mobile-screen({
         top: 103px;
-        left: -43px;
+        left: 57px;
         width: 58px;
 
         &_scrolled {
           top: 43px;
-          left: -58px;
-          width: 50px;
+          left: 4px;
+          width: 46px;
         }
       });
     }
@@ -142,13 +147,13 @@
 
       .mobile-screen({
         top: 114px;
-        left: -23px;
+        left: 77px;
         width: 36px;
 
         &_scrolled {
-          top: 43px;
-          left: -6px;
-          width: 30px;
+          top: 44px;
+          left: 54px;
+          width: 29px;
         }
       });
     }
