--- a/src/components/block-cases/index.less
+++ b/src/components/block-cases/index.less
@@ -1,3 +1,5 @@
+@import url("../../common/adaptive");
+
 .block-cases {
   &__top {
     display: flex;
@@ -5,6 +7,10 @@
     justify-content: space-between;
     margin: 0 auto;
     gap: 20px;
+
+    .mobile-screen({
+      gap: 80px;
+    });
   }
 
   &__title {
@@ -15,6 +21,11 @@
     font-style: normal;
     font-weight: 900;
     line-height: 90%; /* 43.2px */
+
+    .mobile-screen({
+      font-size: 32px;
+      margin-bottom: 40px;
+    });
   }
 
   &__text {
@@ -26,15 +37,22 @@
     font-style: normal;
     font-weight: 400;
     line-height: 120%; /* 28.8px */
+
+    .mobile-screen({
+      font-size: 16px;
+      margin-bottom: 40px;
+    });
   }
 
   &__cards {
     display: flex;
     overflow: hidden;
     flex-flow: row nowrap;
-    padding: 50px;
-    margin: -50px -100px;
     gap: 40px;
+
+    .mobile-screen({
+      overflow-x: scroll;
+    })
   }
 
   &__card {
@@ -48,6 +66,12 @@
     background: lightgray 50% / cover no-repeat;
     background-size: cover;
 
+    .mobile-screen({
+      width: 240px;
+      height: 240px;
+      min-width: 240px;
+    });
+
     &__title {
       margin-bottom: 10px;
       color: #FFF;
@@ -56,6 +80,10 @@
       font-style: normal;
       font-weight: 700;
       line-height: 90%;/* 28.8px */
+
+      .mobile-screen({
+        font-size: 22px;
+      });
     }
 
     &__text {
@@ -65,6 +93,10 @@
       font-style: normal;
       font-weight: 400;
       line-height: 90%; /* 16.2px */
+
+      .mobile-screen({
+        font-size: 12px;
+      });
     }
 
     &__info {
