--- a/src/components/block-reviews/index.less
+++ b/src/components/block-reviews/index.less
@@ -1,3 +1,5 @@
+@import url("../../common/adaptive");
+
 .block-review {
   position: relative;
 
@@ -16,6 +18,10 @@
     display: flex;
     width: 100%;
     justify-content: center;
+
+    .mobile-screen({
+      bottom: 35px;
+    });
   }
 
   &__title {
@@ -26,14 +32,17 @@
     font-style: normal;
     font-weight: 900;
     line-height: 90%; /* 43.2px */
+
+    .mobile-screen({
+      font-size: 32px;
+      margin-bottom: 40px;
+    });
   }
 
   &__cards {
     display: flex;
     overflow: hidden;
     flex-flow: row nowrap;
-    padding: 50px;
-    margin: -50px -100px;
     gap: 10px;
   }
 
