--- a/src/components/block-tickets/index.less
+++ b/src/components/block-tickets/index.less
@@ -1,3 +1,5 @@
+@import url("../../common/adaptive");
+
 .block-tickets {
   &__top {
     display: flex;
@@ -5,6 +7,10 @@
     margin: 0 auto;
     color: #202020;
     gap: 20px;
+
+    .mobile-screen({
+      gap: 40px;
+    });
   }
 
   &__title {
@@ -14,6 +20,10 @@
     font-style: normal;
     font-weight: 900;
     line-height: 90%; /* 43.2px */
+
+    .mobile-screen({
+      font-size: 32px;
+    });
   }
 
   &__text {
@@ -24,6 +34,10 @@
     font-style: normal;
     font-weight: 400;
     line-height: 120%; /* 28.8px */
+
+    .mobile-screen({
+      font-size: 16px;
+    });
   }
 
   &__tickets {
