--- a/src/components/block-main/index.less
+++ b/src/components/block-main/index.less
@@ -27,8 +27,9 @@
     gap: 30px;
 
     .mobile-screen({
-      padding: 60px 60px 70px 170px;
+      padding: 60px 0 70px 170px;
       flex-direction: column;
+      width: 150px;
     });
 
     &__count-wrapper {
